# PhoTensor

./: .cnb.yml  .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  clippy.toml  flake.nix  rust-toolchain.toml  rustfmt.toml
.github/workflows/: ci.yml
.ide/: Dockerfile
docs/: pnpm-lock.yaml
src/burn/: Cargo.toml
src/core/: Cargo.toml
src/hw/: Cargo.toml
src/macros/: Cargo.toml
src/photensor/: Cargo.toml
src/pyphotensor/: Cargo.toml  pyproject.toml
src/pyphotensor/src/: lib.rs
src/sim/: Cargo.toml
src/sim/examples/: inspect_matrix.rs  run_matrix.rs
src/sim/src/: lib.rs
src/sim/src/gds/: flatten.rs  loader.rs  mod.rs
src/sim/src/mzi_array/: engine.rs  mod.rs
