[workspace]
members = [
    "src/core",
    "src/sim",
    "src/hw",
    "src/burn",
    "src/macros",
    "src/pyphotensor",
    "src/photensor",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Xuan Zou"]
license-file = "LICENSE"
repository = "https://github.com/IGIPME/PhoTensor"
