[package]
name = "photensor-sim"
version.workspace = true
edition.workspace = true
authors.workspace = true
license-file.workspace = true
repository.workspace = true
description = "Pure-software photonic neural network simulator for PhoTensor."

[dependencies]
oxiphoton = { workspace = true }
num-complex = "0.4"
thiserror = "2"

[dev-dependencies]
approx = "0.5"
